repair text-align-crnter in submit button

--- a/common.blocks/index.css
+++ b/common.blocks/index.css
@@ -160,7 +160,7 @@ a {
     font-size: 14px;
     font-weight: 400;
     font-style: normal;
-    text-align: left;
+    text-align: center;
     padding: 10px;
     text-decoration: none;
 }
